Add Schema for Labs

--- a/bootcamp/.settings/org.eclipse.core.resources.prefs
+++ b/bootcamp/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//activities/migrations/0001_initial.py=utf-8
+encoding//labs/migrations/0001_initial.py=utf-8
 encoding//projects/migrations/0001_initial.py=utf-8
