--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ Markdown==2.6.7
 bleach==1.5.0
 whitenoise==3.2.2
 psycopg2==2.6.2
+oauth2==1.9.0.post1
+oauthlib==2.0.1
+simplejson==3.10.0
+python-linkedin==4.1
